# ProgettoAI

./: .gitignore  NuoviValoriEnv  README.md  main.py  pyproject.toml
data/tracks/: imola_track.csv  track_austria.csv  track_brasile.csv  track_imola.csv  track_monza.csv  track_ovale.csv  track_spa.csv
docs/: Relazione.ipynb
models/: best_model.pth
models/accelerazione/: best_model.pth
models/checkpoints/: checkpoint_ep_60000.pth
models/fine_tuning_model/: cp_390000.pth  cp_65000.pth  cp_75000.pth  cp_85000.pth  cp_87000.pth
models/simple_aggiornato/: best_model.pth
notebooks/: TrackEnv.ipynb  old_do_not_use_TrackEnv.ipynb
scripts/: visualize_checkpoints.py
src/: TrackEnv.py  main.py  main_costants.py
src/agents/: __init__.py  agent.py  agent_costants.py  network.py
src/env/: __init__.py  track_constants.py  track_costants.py  track_env.py  track_utils.py
src/utils/: __init__.py  report_generator.py  visual.py
