[project]
name = "progettoai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pygame-ce>=2.5.6",
    "torch>=2.10.0",
    "tqdm>=4.67.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.14",
]
